# ghcid-bug-repro

./: LICENSE  README.md  Test.hs  ghcid-test.cabal  stack.yaml
a/: a.cabal
a/app/: Main.hs
a/src/: A.hs
b/: b.cabal
b/app/: Main.hs
b/src/: B.hs
