name:                ghcid-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rvion/a#readme
license:             BSD3
license-file:        LICENSE
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           Rémi Vion 2016
category:            tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Test
  build-depends:       base >= 4.7 && < 5
                     , a
                     , b
  default-language:    Haskell2010
