name:                b
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rvion/b#readme
license:             BSD3
license-file:        LICENSE
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           Rémi Vion 2016
category:            tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     B
  build-depends:       base >= 4.7 && < 5
                     , a
  default-language:    Haskell2010

executable b-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , b
  default-language:    Haskell2010
